--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,10 @@ stages:
       displayName: 'improve curl parameters'
     - script: make arm_sdk_install
       displayName: 'Install the build toolchain'
-    - script: echo "##vso[task.setvariable variable=firmVersion;]$(make version)"
+    - script: |
+        myVersion="$(make version)"
+        echo "##vso[task.setvariable variable=firmVersion;]$myVersion"
+        echo $myVersion
       displayName: 'get make version'
     - script: make $(GOAL) -j2
       displayName: 'Build the Targets'
