--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,7 +106,8 @@ stages:
         myVersion="$(make version)"
         echo "##vso[task.setvariable variable=firmVersion;]$myVersion"
         echo $myVersion
-      displayName: 'get make version'    - task: GitHubReleasePublish@1
+      displayName: 'get make version'
+    - task: GitHubReleasePublish@1
       inputs:
         githubEndpoint: '$(endpoint)'
         manuallySetRepository: true
