--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@
 #     "repoName" - The name of the repository to release to e.g. myREPO
 #         modded for two repoNames: destinationRepoName & destinationRepoNameTwo
 
-variables:
+variables:                                                    #default scope is Release Scope i.e. global across stages
   endpoint: nerdCopter
   owner: nerdCopter
   destinationRepoName: EmuFlight_nerdRepo                     #release destination
@@ -71,11 +71,11 @@ stages:
       displayName: 'improve curl parameters'
     - script: make arm_sdk_install
       displayName: 'Install the build toolchain'
-#    - script: |
-#        myVersion="$(make version)"
-#        echo "##vso[task.setvariable variable=firmVersion;]$myVersion"
-#        echo $myVersion
-#      displayName: 'get make version'
+    - script: |
+        myVersion="$(make version)"
+        echo "##vso[task.setvariable variable=firmVersion;]$myVersion"
+        echo $myVersion
+      displayName: 'get make version'
     - script: make $(GOAL) -j2
       displayName: 'Build the Targets'
     - script: mkdir release; cp obj/*.hex release/
@@ -102,11 +102,8 @@ stages:
         buildType: 'current'
         targetPath: '$(Pipeline.Workspace)'
     - powershell: Write-Output ("##vso[task.setvariable variable=today;]$(Get-Date -Format yyyyMMdd)")
-    - script: |
-        myVersion="$(make version)"
-        echo "##vso[task.setvariable variable=firmVersion;]$myVersion"
-        echo $myVersion
-      displayName: 'get make version'
+    - powershell: Write-Output "$(firmVersion) $firmVersion ${firmVersion}"
+      displayName 'firmware version'
     - task: GitHubReleasePublish@1
       inputs:
         githubEndpoint: '$(endpoint)'
