test 025; try firmVersion

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,7 +105,7 @@ stages:
         Write-Output ("##vso[task.setvariable variable=today;]$(Get-Date -Format yyyyMMdd)")
         Write-Output ("today is $(today) $today ${today}")
       displayName: 'today'
-    - powershell: Write-Output ("firmware version is: $(firmVersion) $firmVersion ${firmVersion}")
+    - powershell: Write-Output "firmware version is: $(firmVersion) $firmVersion ${firmVersion}"
       displayName: 'firmware version'
     - task: GitHubReleasePublish@1
       inputs:
