--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,9 +104,8 @@ stages:
     - powershell: |
         Write-Output ("##vso[task.setvariable variable=today;]$(Get-Date -Format yyyyMMdd)")
         Write-Output ("today is $(today) $today ${today}")
-      displayName: 'today'
-    - powershell: Write-Output "firmware version is: $(firmVersion) $firmVersion ${firmVersion}"
-      displayName: 'firmware version'
+        Write-Output "firmware version is: $(firmVersion) $firmVersion"
+      displayName: 'vars and vals'
     - task: GitHubReleasePublish@1
       inputs:
         githubEndpoint: '$(endpoint)'
