test 031; try firmVersion

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,7 +73,7 @@ stages:
       displayName: 'Install the build toolchain'
     - script: |
         myVersion="$(make version)"
-        echo "##vso[pipeline.setvariable variable=firmVersion;]$myVersion"
+        echo "##vso[task.setvariable variable=firmVersion;]$myVersion"
         echo $myVersion | tee release/firmVersion
       displayName: 'get make version'
     - script: make $(GOAL) -j2
@@ -111,11 +111,17 @@ stages:
         Write-Output '$(firmVersion)'
         Write-Output "okay, reading from file"
         firmVersion = Get-Content -Path '$(System.DefaultWorkingDirectory)/release/firmVersion'
+        Write-Output ("##vso[task.setvariable variable=firmVersion;]$firmVersion")
         Write-Output "okay, read from file ^^"
         Write-Output "firmware version is: $firmVersion ${firmVersion}"
         Write-Output ($(firmVersion))
         Write-Output '$(firmVersion)'
       displayName: 'vars and vals'
+      continueOnError: true
+    - powershell: |
+        Write-Output ($(firmVersion))
+        Write-Output '$(firmVersion)'
+      displayName: 'firmVersion outside'
       continueOnError: true
     - task: GitHubReleasePublish@1
       continueOnError: true
