test 037; something gotta give; firmVersion

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,6 +102,17 @@ stages:
       inputs:
         artifactName: $(artifactName)
         targetPath: '$(System.DefaultWorkingDirectory)/release/'
+    - task: PublishPipelineArtifact@1
+      displayName: 'Publish Firmware version1'
+      inputs:
+        artifactName: $(artifactName)
+        targetPath: '$(Pipeline.Workspace)/variables/firmVersion'
+    - task: PublishPipelineArtifact@1
+      displayName: 'Publish Firmware version2'
+      inputs:
+        artifactName: $(artifactName)
+        targetPath: '$(System.DefaultWorkingDirectory)/variables/firmVersion'
+
 
 - stage: Release
   jobs:
