--- a/.travis.yml
+++ b/.travis.yml
@@ -70,8 +70,8 @@ deploy:
     on:
       tags: true
   - provider: bintray
-    user: "${BINTRAY_USER}"
-    key: "${BINTRAY_API_KEY}"
+    user: "${BINTRAY_USER2}"
+    key: "${BINTRAY_API_KEY2}"
     file: bintray-conf.json
     skip_cleanup: true # do not delete what has just been built
     on:
