--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -220,5 +220,4 @@ stages:
       inputs:
         files: '$(Pipeline.Workspace)/emu**/**'
         serviceEndpoint: 'BinTray-Dev'
-        remotePath: 'nerdCopter_fork/$(Build.BuildNumber)-$(firmVersion)/$(Build.SourceBranchName)/'
-#        options: "-H 'X-Bintray-Package:$(Build.SourceBranchName)' -H 'X-Bintray-Version:$(Build.BuildNumber)-$(firmVersion)'"
+        remotePath: 'nerdCopter_fork/$(Build.BuildNumber)_$(firmVersion)_$(Build.SourceBranchName)/$(Build.BuildNumber)_$(firmVersion)_$(Build.SourceBranchName)'
