function wrapper for curl in github workflow (#265)
* function wrapper for curl
should reduce stalls due to toolchain timeouts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
         targets: [targets-group-1, targets-group-2, targets-group-rest]
     runs-on: ubuntu-latest
     steps:
+    - name: curl fix
+      run: function curl () { command curl --connect-timeout 30 --retry 10 "$@" ; }
 
     - name: Checkout
       uses: actions/checkout@v2
