WIP; testing without github action arm_sdk

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,10 +44,10 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v1
 
-    - name: Setup Toolchain
-      uses: fiam/arm-none-eabi-gcc@master
-      with:
-        release: '9-2020-q2' # The arm-none-eabi-gcc release to use.
+#   - name: Setup Toolchain
+#     uses: fiam/arm-none-eabi-gcc@master
+#     with:
+#       release: '9-2020-q2' # The arm-none-eabi-gcc release to use.
 
     - name: Get code version
       id: get_version
